--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,9 @@
-.header {
-  height: 80px;
+.root {
+  height: 93px;
+}
+
+.wrap {
   width: 100%;
-  background-color: black;
-  text-align: center;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 13px;
+  max-width: 1125px;
+  height: 63px;
 }
