--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
+html,
 body {
-    min-height: 100vh;
-    background: coral;
+    margin: 0; 
+    padding: 0;
 }
