--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
 * {
     box-sizing: border-box;
 }
@@ -7,6 +6,10 @@
 html, body {
     margin: 0;
     padding: 0;
+}
+
+#root {
+    overflow: hidden;
 }
 
 body {
