--- a/src/pages/NotFound/NotFoundPage.module.scss
+++ b/src/pages/NotFound/NotFoundPage.module.scss
@@ -9,20 +9,8 @@
 }
 
 .wrap {
-    max-width: 1284px;
+    max-width: 1280px;
     width: 100%;
-}
-
-.text {
-    font-weight: bold;
-    font-size: 700px;
-    line-height: 625px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 4px;
-    color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    z-index: 0;
 }
 
 .layer {
@@ -33,10 +21,21 @@
     z-index: 1;
 }
 
+.text {
+    font-weight: bold;
+    font-size: 555px;
+    line-height: 625px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 4px;
+    position: absolute;
+    z-index: 0;
+    margin-left: 150px;
+}
 .subTitle {
     font-size: 48px;
     font-weight: bold;
-    margin-bottom: 60px;
+    margin-bottom: 500px; //lol
 
     span {
         color: #fff;
