--- a/src/components/PokemonCard/PokemonCard.module.scss
+++ b/src/components/PokemonCard/PokemonCard.module.scss
@@ -1,142 +1,110 @@
 .root {
-  width: 33.33%;
-  padding: 0 15px;
-  filter: drop-shadow(4px 4px 4px rgba(33, 33, 33, 0.1));
-  margin-bottom: 45px;
-  height: 137px;
-  overflow: hidden;
-}
-
-.wrap {
+  width: 351px;
+  height: 136px;
+  box-shadow: 4px 4px 4px rgba(33, 33, 33, 0.1);
   background: #f6f7f9;
-  display: flex;
-  justify-content: space-between;
-  height: 100%;
   border-radius: 8px;
-}
-
-.info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  overflow: hidden;
   position: relative;
-  z-index: 1;
-  margin-left: 26px;
+  margin-bottom: 45px;
+  cursor: pointer;
+  transition: all ease-in-out 0.15s;
+
+  &:hover {
+    transform: scale(1.03);
+    transition: all ease-in-out 0s;
+  }
 }
 
-.name {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 21px;
-  margin-bottom: 10px;
-  color: #212121;
+.infoWrap {
+  position: absolute;
+  z-index: 1;
+  width: 150px;
+  top: 6px;
+  left: 25px;
+}
+
+.titleName {
+  margin-bottom: 12px;
   text-shadow: 4px 4px 4px rgba(33, 33, 33, 0.1);
 }
 
-.stats {
+.statWrap {
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 
-.stat {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.statItem {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  color: #4b4b4b;
+  margin-right: 12px;
 
-  &:not(:last-of-type) {
-    margin-right: 13px;
+  &:last-child {
+    margin-right: 0;
   }
 }
 
-.stat_value {
+.statValue {
+  width: 36px;
+  height: 36px;
   border: 3px solid #212121;
-  border-radius: 100%;
-  width: 37px;
-  height: 37px;
+  border-radius: 50%;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-style: normal;
+  font-weight: normal;
   font-size: 15px;
   line-height: 18px;
-  margin-bottom: 6px;
-}
-
-.stat_title {
-  font-size: 12px;
-  color: #4b4b4b;
-}
-
-.types {
-  display: flex;
-}
-
-.type {
-  box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.18);
-  border-radius: 11px;
-  padding: 3px 0;
-  width: 60px;
-  text-align: center;
-  font-size: 12px;
   color: #212121;
+  margin: 0 auto 8px;
+}
 
-  &:not(:last-of-type) {
-    margin-right: 13px;
+.pictureWrap {
+  width: 232px;
+  height: 100%;
+  background: linear-gradient(270deg, #b33327 0.15%, #d93e30 100%);
+  position: absolute;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    width: 80%;
   }
 }
 
-.dark,
-.rock {
-  background: #a1a1a1;
-}
-
-.grass,
-.bug {
-  background: #70a83b;
-}
-
-.ice,
-.water,
-.flying {
-  background: #a2cff0;
-}
-
-.fire,
-.fighting,
-.dragon {
-  background: #f76545;
-}
-
-.normal,
-.gosth {
-  background: #76aadb;
-}
-
-.poison,
-.psychic,
-.fairy,
-.ghost {
-  background: #a974bc;
-}
-
-.ground {
-  background: #9b897b;
-}
-
-.electric {
-  background: #f7c545;
-}
-
-.picture {
+.label {
+  background: #f28f16;
+  box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.18);
+  border-radius: 11px;
+  height: 15px;
+  min-width: 60px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  color: #212121;
+  padding: 0 12px 2px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  width: 60%;
-  position: absolute;
-  top: -15%;
-  right: 0;
-  z-index: 0;
+  align-items: center;
+  margin-right: 12px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
-.img {
-  width: 80%;
+.labelWrap {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
